<resources>
    <string name="app_name">Coffee recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">add</string>
    <string name="origem">Origem</string>
    <string name="tipo">Tipo</string>
    <string name="detalhes">Detalhes</string>
    <string name="receita">Receita</string>
    <string name="pre_o_min">Preço MIN</string>
    <string name="pre_o_max">Preço MAX</string>
    <string name="add_coffee">ADD coffee</string>
    <string name="_1">1</string>
    <string name="update_coffee">update coffee</string>
    <string name="imagemcafe">imagemCafe</string>
    <string name="string_imagemcafe">cafe</string>
</resources>