<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B42196F3"
        tools:context=".fragments.register.RegisterFragment">

        <EditText
            android:id="@+id/typeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:autofillHints="type"
            android:ems="10"
            android:hint="@string/tipo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#283593"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/detailsET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="details"
            android:ems="10"
            android:hint="@string/detalhes"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/fromET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="from"
            android:ems="10"
            android:hint="@string/origem"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/recipeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:autofillHints="recipe"
            android:ems="10"
            android:hint="@string/receita"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/priceminET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="pricemin"
            android:ems="10"
            android:hint="@string/pre_o_min"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/pricemaxET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="pricemax"
            android:ems="10"
            android:hint="@string/pre_o_max"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceminET"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/addCoffee"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:layout_marginBottom="24dp"
            android:background="#F4ECEC"
            android:text="@string/add_coffee"
            android:textColor="#FFFFFF"
            android:textColorHint="#F3EDED"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>