<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.update.UpdateFragment" >

        <EditText
            android:id="@+id/uptypeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:autofillHints="type"
            android:ems="10"
            android:hint="@string/tipo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/updetailsET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="details"
            android:ems="10"
            android:hint="@string/detalhes"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uptypeET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/upfromET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="from"
            android:ems="10"
            android:hint="@string/origem"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updetailsET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/uprecipeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:autofillHints="recipe"
            android:ems="10"
            android:hint="@string/receita"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upfromET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/uppriceminET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="pricemin"
            android:ems="10"
            android:hint="@string/pre_o_min"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uprecipeET"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/uppricemaxET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="pricemax"
            android:ems="10"
            android:hint="@string/pre_o_max"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#4CAF50"
            android:textColorHint="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uppriceminET"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/upCoffee"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:layout_marginBottom="24dp"
            android:background="#F4ECEC"
            android:text="@string/update_coffee"
            android:textColor="#FFFFFF"
            android:textColorHint="#F3EDED"
            app:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

